--- a/Statinf/estimation-ponctuelle.html
+++ b/Statinf/estimation-ponctuelle.html
@@ -31,7 +31,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-<link rel="prev" href="echantillonnage-et-theoremes-limites.html"/>
+<link rel="prev" href="tp-illustration-numerique-des-theoremes-limites-avec-r.html"/>
 <link rel="next" href="intervalle-de-confiance.html"/>
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -80,43 +80,46 @@ pre.numberSource a.sourceLine::before
     -khtml-user-select: none; -moz-user-select: none;
     -ms-user-select: none; user-select: none;
     padding: 0 4px; width: 4em;
-    color: #aaaaaa;
+    background-color: #ffffff;
+    color: #a0a0a0;
   }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
 div.sourceCode
-  {  }
+  { color: #1f1c1b; background-color: #ffffff; }
 @media screen {
 a.sourceLine::before { text-decoration: underline; }
 }
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
+code span. { color: #1f1c1b; } /* Normal */
+code span.al { color: #bf0303; background-color: #f7e6e6; font-weight: bold; } /* Alert */
+code span.an { color: #ca60ca; } /* Annotation */
+code span.at { color: #0057ae; } /* Attribute */
+code span.bn { color: #b08000; } /* BaseN */
+code span.bu { color: #644a9b; font-weight: bold; } /* BuiltIn */
+code span.cf { color: #1f1c1b; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #924c9d; } /* Char */
+code span.cn { color: #aa5500; } /* Constant */
+code span.co { color: #898887; } /* Comment */
+code span.cv { color: #0095ff; } /* CommentVar */
+code span.do { color: #607880; } /* Documentation */
+code span.dt { color: #0057ae; } /* DataType */
+code span.dv { color: #b08000; } /* DecVal */
+code span.er { color: #bf0303; text-decoration: underline; } /* Error */
+code span.ex { color: #0095ff; font-weight: bold; } /* Extension */
+code span.fl { color: #b08000; } /* Float */
+code span.fu { color: #644a9b; } /* Function */
+code span.im { color: #ff5500; } /* Import */
+code span.in { color: #b08000; } /* Information */
+code span.kw { color: #1f1c1b; font-weight: bold; } /* Keyword */
+code span.op { color: #1f1c1b; } /* Operator */
+code span.ot { color: #006e28; } /* Other */
+code span.pp { color: #006e28; } /* Preprocessor */
+code span.re { color: #0057ae; background-color: #e0e9f8; } /* RegionMarker */
+code span.sc { color: #3daee9; } /* SpecialChar */
+code span.ss { color: #ff5500; } /* SpecialString */
+code span.st { color: #bf0303; } /* String */
+code span.va { color: #0057ae; } /* Variable */
+code span.vs { color: #bf0303; } /* VerbatimString */
+code span.wa { color: #bf0303; } /* Warning */
 </style>
 
 <link rel="stylesheet" href="css\style.css" type="text/css" />
@@ -140,9 +143,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -196,8 +197,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
 <li class="chapter" data-level="2.5" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#etude-de-la-statistique-s2"><i class="fa fa-check"></i><b>2.5</b> Etude de la statistique <span class="math inline">\(S^2\)</span></a></li>
-<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillons-gaussiens"><i class="fa fa-check"></i><b>2.6</b> Echantillons Gaussiens</a></li>
-<li class="chapter" data-level="2.7" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.7</b> Introduction à l’estimation ?</a></li>
+<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.6</b> Introduction à l’estimation</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="exercices-1.html"><a href="exercices-1.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><i class="fa fa-check"></i>TP illustration numérique des théorèmes limites avec R</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#realisations-de-variables-aleatoires"><i class="fa fa-check"></i>Réalisations de variables aléatoires</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-densite"><i class="fa fa-check"></i>Fonction de densité</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-repartition"><i class="fa fa-check"></i>Fonction de répartition</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#illustrations-de-theoremes-limites"><i class="fa fa-check"></i>Illustrations de théorèmes limites</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#loi-forte-de-grands-nombres"><i class="fa fa-check"></i>Loi forte de grands nombres</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#theoreme-central-limite-1"><i class="fa fa-check"></i>Théorème central limite</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#bonus"><i class="fa fa-check"></i>Bonus</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
 <li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
@@ -335,7 +346,7 @@ estimateur.</p>
 <p>Pour estimer <span class="math inline">\(\theta\)</span> on ne dispose que des données <span class="math inline">\(x_1,\ldots,x_n\)</span>, donc une estimation de <span class="math inline">\(\theta\)</span> sera une fonction de ces observations.</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-59" class="definition"><strong>Définition 3.1  (Définition d’une statistique)  </strong></span>Une <strong>statistique</strong> <span class="math inline">\(t\)</span> est une fonction des observations <span class="math inline">\(x_1,\ldots,x_n\)</span> :</p>
+<p><span id="def:unnamed-chunk-70" class="definition"><strong>Définition 3.1  (Définition d’une statistique)  </strong></span>Une <strong>statistique</strong> <span class="math inline">\(t\)</span> est une fonction des observations <span class="math inline">\(x_1,\ldots,x_n\)</span> :</p>
 <span class="math display">\[\begin{align}
 t: \, &amp; \mathbb{R}^n \rightarrow \mathbb{R}^m  \\
       &amp; (x_1,\ldots,x_n) \rightarrow t(x_1,\ldots,x_n)
@@ -348,7 +359,7 @@ t: \, &amp; \mathbb{R}^n \rightarrow \mathbb{R}^m  \\
 <p>Par abus, on donne le même nom de statistique aux deux quantités, mais dans une perspective d’estimation, on va nommer différemment <span class="math inline">\(t_n\)</span> et <span class="math inline">\(T_n\)</span>.</p>
 
 <div class="definition">
-<span id="def:unnamed-chunk-60" class="definition"><strong>Définition 3.2  (Définition d’un estimateur)  </strong></span>Un estimateur d’une grandeur <span class="math inline">\(\theta\)</span> est une statistique <span class="math inline">\(T_n\)</span> à valeurs dans
+<span id="def:unnamed-chunk-71" class="definition"><strong>Définition 3.2  (Définition d’un estimateur)  </strong></span>Un estimateur d’une grandeur <span class="math inline">\(\theta\)</span> est une statistique <span class="math inline">\(T_n\)</span> à valeurs dans
 l’ensemble des valeurs possibles de <span class="math inline">\(\theta\)</span>. Une estimation de <span class="math inline">\(\theta\)</span> est une réalisation <span class="math inline">\(t_n\)</span> de l’estimateur <span class="math inline">\(T_n\)</span>.
 </div>
 
@@ -400,7 +411,7 @@ probabilité par une proportion.</p>
 <h3><span class="header-section-number">3.4.1</span> La fonction de vraisemblance</h3>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-61" class="definition"><strong>Définition 3.3  </strong></span>Quand les observations sont toutes discrètes ou toutes continues, on appelle fonction de vraisemblance (ou plus simplement vraisemblance) pour l’échantillon <span class="math inline">\(x_1,\ldots,x_n\)</span>, la fonction du paramètre <span class="math inline">\(\theta\)</span> :</p>
+<p><span id="def:unnamed-chunk-72" class="definition"><strong>Définition 3.3  </strong></span>Quand les observations sont toutes discrètes ou toutes continues, on appelle fonction de vraisemblance (ou plus simplement vraisemblance) pour l’échantillon <span class="math inline">\(x_1,\ldots,x_n\)</span>, la fonction du paramètre <span class="math inline">\(\theta\)</span> :</p>
 <span class="math display">\[\begin{equation*}
 \mathcal{L}(\theta; x_1,\ldots,x_n) = \left\lbrace
       \begin{array}{ll}
@@ -532,7 +543,7 @@ la valeur la plus vraisemblable de <span class="math inline">\(\theta\)</span> e
 plus probable qui s’était produite au cours de l’expérience.</p>
 
 <div class="definition">
-<span id="def:unnamed-chunk-64" class="definition"><strong>Définition 3.4  </strong></span>L’estimation de maximum de vraisemblance de <span class="math inline">\(\theta\)</span> est la valeur <span class="math inline">\(\hat{\theta}_n\)</span> de <span class="math inline">\(\theta\)</span> qui rend maximale la fonction de vraisemblance <span class="math inline">\(\mathcal{L}(\theta;x_1 ,\ldots,x_n)\)</span>. L’estimateur de
+<span id="def:unnamed-chunk-75" class="definition"><strong>Définition 3.4  </strong></span>L’estimation de maximum de vraisemblance de <span class="math inline">\(\theta\)</span> est la valeur <span class="math inline">\(\hat{\theta}_n\)</span> de <span class="math inline">\(\theta\)</span> qui rend maximale la fonction de vraisemblance <span class="math inline">\(\mathcal{L}(\theta;x_1 ,\ldots,x_n)\)</span>. L’estimateur de
 maximum de vraisemblance (EMV) de <span class="math inline">\(\theta\)</span> est la variable aléatoire correspondante.
 </div>
 
@@ -602,7 +613,7 @@ les deux méthodes fournissent des estimateurs différents. C’est le cas de la
 <p>Par exemple, les risques <span class="math inline">\(T_n - \theta, |T_n - \theta|, (T_n - \theta)^2\)</span> expriment bien un écart entre <span class="math inline">\(T_n\)</span> et <span class="math inline">\(\theta\)</span>. Mais comme il est plus facile d’utiliser des quantités déterministes que des quantités aléatoires, on s’intéresse en priorité aux espérances des quantités précédentes. En particulier:</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-67" class="definition"><strong>Définition 3.5  </strong></span>Le <strong>biais</strong> de <span class="math inline">\(T_n\)</span> est <span class="math inline">\(E(T_n)-\theta\)</span>.</p>
+<p><span id="def:unnamed-chunk-78" class="definition"><strong>Définition 3.5  </strong></span>Le <strong>biais</strong> de <span class="math inline">\(T_n\)</span> est <span class="math inline">\(E(T_n)-\theta\)</span>.</p>
 Le <strong>risque quadratique</strong> ou <strong>erreur quadratique moyenne</strong> est:
 <span class="math display">\[ EQM(T_n)=E[(T_n-\theta)^2]\]</span>
 </div>
@@ -610,7 +621,7 @@ Le <strong>risque quadratique</strong> ou <strong>erreur quadratique moyenne</st
 <p>Dans le cas du biais, le rique peut être nul:</p>
 
 <div class="definition">
-<span id="def:unnamed-chunk-68" class="definition"><strong>Définition 3.6  </strong></span>Un <strong>estimateur</strong> <span class="math inline">\(T_n\)</span> de <span class="math inline">\(\theta\)</span> est <strong><em>sans biais</em></strong> si et seulement si <span class="math inline">\(E(T_n) = \theta\)</span>. Il est <strong><em>biaisé</em></strong> si et seulement si <span class="math inline">\(E(T_n) \neq \theta\)</span>.
+<span id="def:unnamed-chunk-79" class="definition"><strong>Définition 3.6  </strong></span>Un <strong>estimateur</strong> <span class="math inline">\(T_n\)</span> de <span class="math inline">\(\theta\)</span> est <strong><em>sans biais</em></strong> si et seulement si <span class="math inline">\(E(T_n) = \theta\)</span>. Il est <strong><em>biaisé</em></strong> si et seulement si <span class="math inline">\(E(T_n) \neq \theta\)</span>.
 </div>
 
 <p>Le biais mesure une erreur systématique d’estimation de <span class="math inline">\(\theta\)</span> par <span class="math inline">\(T_n\)</span>. Par exemple, si <span class="math inline">\(E(T_n)-\theta &lt; 0\)</span>, cela signifie que <span class="math inline">\(T_n\)</span> aura tendance à <em>sous-estimer</em> <span class="math inline">\(\theta\)</span>.</p>
@@ -643,7 +654,7 @@ mais on s’intéresse en général à la convergence en moyenne quadratique (ou
 dans <span class="math inline">\(L^2\)</span>).</p>
 
 <div class="definition">
-<p><span id="def:unnamed-chunk-69" class="definition"><strong>Définition 3.7  </strong></span>L’estimateur <span class="math inline">\(T_n\)</span> <strong>converge en moyenne quadratique</strong> vers <span class="math inline">\(\theta\)</span> si et seulement si son erreur quadratique moyenne tend vers 0 quand <span class="math inline">\(n\)</span> tend vers l’infini:</p>
+<p><span id="def:unnamed-chunk-80" class="definition"><strong>Définition 3.7  </strong></span>L’estimateur <span class="math inline">\(T_n\)</span> <strong>converge en moyenne quadratique</strong> vers <span class="math inline">\(\theta\)</span> si et seulement si son erreur quadratique moyenne tend vers 0 quand <span class="math inline">\(n\)</span> tend vers l’infini:</p>
 <span class="math display">\[T_{n} \stackrel{M Q}{\longrightarrow} \theta \Leftrightarrow \lim _{n \rightarrow \infty} E\left[\left(T_{n}-\theta\right)^{2}\right]=0\]</span>
 </div>
 
@@ -698,7 +709,7 @@ La commande <code>var(x)</code> en <code>R</code> donne la variance estimée, et
           </div>
         </div>
       </div>
-<a href="echantillonnage-et-theoremes-limites.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="intervalle-de-confiance.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
