--- a/Statinf/echantillonnage-et-theoremes-limites.html
+++ b/Statinf/echantillonnage-et-theoremes-limites.html
@@ -32,7 +32,7 @@
   
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 <link rel="prev" href="tp-statistique-descriptive-avec-r.html"/>
-<link rel="next" href="estimation-ponctuelle.html"/>
+<link rel="next" href="exercices-1.html"/>
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="book_assets/gitbook-2.6.7/css/plugin-table.css" rel="stylesheet" />
@@ -80,43 +80,46 @@ pre.numberSource a.sourceLine::before
     -khtml-user-select: none; -moz-user-select: none;
     -ms-user-select: none; user-select: none;
     padding: 0 4px; width: 4em;
-    color: #aaaaaa;
+    background-color: #ffffff;
+    color: #a0a0a0;
   }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
 div.sourceCode
-  {  }
+  { color: #1f1c1b; background-color: #ffffff; }
 @media screen {
 a.sourceLine::before { text-decoration: underline; }
 }
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
+code span. { color: #1f1c1b; } /* Normal */
+code span.al { color: #bf0303; background-color: #f7e6e6; font-weight: bold; } /* Alert */
+code span.an { color: #ca60ca; } /* Annotation */
+code span.at { color: #0057ae; } /* Attribute */
+code span.bn { color: #b08000; } /* BaseN */
+code span.bu { color: #644a9b; font-weight: bold; } /* BuiltIn */
+code span.cf { color: #1f1c1b; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #924c9d; } /* Char */
+code span.cn { color: #aa5500; } /* Constant */
+code span.co { color: #898887; } /* Comment */
+code span.cv { color: #0095ff; } /* CommentVar */
+code span.do { color: #607880; } /* Documentation */
+code span.dt { color: #0057ae; } /* DataType */
+code span.dv { color: #b08000; } /* DecVal */
+code span.er { color: #bf0303; text-decoration: underline; } /* Error */
+code span.ex { color: #0095ff; font-weight: bold; } /* Extension */
+code span.fl { color: #b08000; } /* Float */
+code span.fu { color: #644a9b; } /* Function */
+code span.im { color: #ff5500; } /* Import */
+code span.in { color: #b08000; } /* Information */
+code span.kw { color: #1f1c1b; font-weight: bold; } /* Keyword */
+code span.op { color: #1f1c1b; } /* Operator */
+code span.ot { color: #006e28; } /* Other */
+code span.pp { color: #006e28; } /* Preprocessor */
+code span.re { color: #0057ae; background-color: #e0e9f8; } /* RegionMarker */
+code span.sc { color: #3daee9; } /* SpecialChar */
+code span.ss { color: #ff5500; } /* SpecialString */
+code span.st { color: #bf0303; } /* String */
+code span.va { color: #0057ae; } /* Variable */
+code span.vs { color: #bf0303; } /* VerbatimString */
+code span.wa { color: #bf0303; } /* Warning */
 </style>
 
 <link rel="stylesheet" href="css\style.css" type="text/css" />
@@ -140,9 +143,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -196,8 +197,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
 <li class="chapter" data-level="2.5" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#etude-de-la-statistique-s2"><i class="fa fa-check"></i><b>2.5</b> Etude de la statistique <span class="math inline">\(S^2\)</span></a></li>
-<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillons-gaussiens"><i class="fa fa-check"></i><b>2.6</b> Echantillons Gaussiens</a></li>
-<li class="chapter" data-level="2.7" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.7</b> Introduction à l’estimation ?</a></li>
+<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.6</b> Introduction à l’estimation</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="exercices-1.html"><a href="exercices-1.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><i class="fa fa-check"></i>TP illustration numérique des théorèmes limites avec R</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#realisations-de-variables-aleatoires"><i class="fa fa-check"></i>Réalisations de variables aléatoires</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-densite"><i class="fa fa-check"></i>Fonction de densité</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-repartition"><i class="fa fa-check"></i>Fonction de répartition</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#illustrations-de-theoremes-limites"><i class="fa fa-check"></i>Illustrations de théorèmes limites</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#loi-forte-de-grands-nombres"><i class="fa fa-check"></i>Loi forte de grands nombres</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#theoreme-central-limite-1"><i class="fa fa-check"></i>Théorème central limite</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#bonus"><i class="fa fa-check"></i>Bonus</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
 <li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
@@ -344,7 +355,7 @@ A un échantillon, on peut associer plusieurs statistiques.
 <h2><span class="header-section-number">2.2</span> La statistique <span class="math inline">\(\overline{X}_n\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-56" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
+<span id="def:unnamed-chunk-55" class="definition"><strong>Définition 2.3  (Moyenne empirique)  </strong></span>La statistique <span class="math inline">\(\overline{X}_n\)</span> ou moyenne empirique d’un échantillon est une statistique définie par <span class="math display">\[\overline{X}_n = \frac{1}{n} \sum_{i=1}^n X_i\]</span>
 </div>
 
 <p><strong>Espérance et variance de <span class="math inline">\(\overline{X}_n\)</span></strong>:</p>
@@ -444,7 +455,10 @@ prouvé avec rigueur.</p>
 </div>
 <p><strong>Application 1</strong>:</p>
 <p>Pour une taille d’échantillon <span class="math inline">\(n\)</span> suffisamment grande, on peut considérer que <span class="math inline">\(\overline{X}_n\)</span> a pour loi:</p>
-<p><span class="math display">\[ \overline{X}_n \thicksim \mathcal{N}\big(m, \frac{\sigma}{\sqrt{n}}\big)\]</span></p>
+<p><span class="math display">\[ \overline{X}_n \thicksim \mathcal{N}\big(m, \frac{\sigma^2}{n}\big)\]</span>
+:::rmdcaution
+Dans la notation de la loi normale ci dessus <span class="math inline">\(\frac{\sigma^2}{n}\)</span> est la variance. <span class="math inline">\(\frac{\sigma}{\sqrt{n}}\)</span> est l’écart-type.
+:::</p>
 <p><strong>Application 2</strong>: la loi d’un pourcentage, étudiée dans la section suivante.</p>
 </div>
 </div>
@@ -455,18 +469,21 @@ répétitions indépendantes d’une même épreuve dont la probabilité de succ
 <p>La loi de <span class="math inline">\(X\)</span> est la loi binomiale de paramètres <span class="math inline">\(n\)</span> et <span class="math inline">\(p\)</span> notée <span class="math inline">\(\mathcal{B}(n, p)\)</span>. <span class="math inline">\(X\)</span> est la somme de <span class="math inline">\(n\)</span> variables indépendantes de Bernoulli de paramètre <span class="math inline">\(p\)</span>.</p>
 <p>Notons <span class="math inline">\(P_n\)</span> la <em>fréquence empirique</em> du nombre de succès parmi les <span class="math inline">\(n\)</span> épreuves:</p>
 <p><span class="math display">\[P_n= \frac{X}{n}\]</span></p>
+<div class="rmdinsight">
+<p><span class="math inline">\(P_n = \overline{X}_n\)</span> car <span class="math inline">\(X\)</span> est la somme de <span class="math inline">\(n\)</span> variables indépendantes de Bernoulli de paramètre <span class="math inline">\(p\)</span>.</p>
+</div>
 <p><span class="math inline">\(P_n\)</span> a pour espérance et pour variance:</p>
 <p><span class="math display">\[E(P_n) = p \quad \quad \text{et} \quad \quad V(P_n) = \frac{p(1-p)}{n}\]</span></p>
 <p>En appliquant le théorème central limite à <span class="math inline">\(X\)</span> somme des variables de Bernoulli:</p>
 <p><span class="math display">\[ \text{Pour } n \text{ suffisamment grand, on peut être considérer que } P_n \text{ suit la loi normale :}\]</span>
-<span class="math display">\[P_n \thicksim \mathcal{N}\bigg(p, \sqrt{\frac{p(1-p)}{n}}\bigg)\]</span></p>
+<span class="math display">\[P_n \thicksim \mathcal{N}\bigg(p, {\frac{p(1-p)}{n}}\bigg)\]</span></p>
 <p>Ce résultat est une autre formulation du théorème de “De Moive-Laplace” (<a href="./variables-aleatoires-continues.html#approximation-normale-dune-repartition-binomiale">lien</a>).</p>
 </div>
 <div id="etude-de-la-statistique-s2" class="section level2">
 <h2><span class="header-section-number">2.5</span> Etude de la statistique <span class="math inline">\(S^2\)</span></h2>
 
 <div class="definition">
-<span id="def:unnamed-chunk-57" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
+<span id="def:unnamed-chunk-56" class="definition"><strong>Définition 2.4  (Variance empirique)  </strong></span>La statistique <span class="math inline">\(S_n^2\)</span> ou variance empirique d’échantillon est définie par:
 <span class="math display">\[S_n^{2}=\frac{1}{n} \sum_{i=1}^{n}\left(X_{i}-\overline{X}_n\right)^{2}\]</span>
 </div>
 
@@ -490,12 +507,91 @@ E(S_n^{2}) &amp; =\frac{1}{n} \sum_{i=1}^{n}E\big(X_{i}-m\big)^2-E\big(\overline
 <div class="rmdinsight">
 <p>On peut remarquer que si on pose: <span class="math inline">\({S_n^{*}}^2 = \frac{n}{n-1}S_n^2\)</span> alors <span class="math inline">\(E({S_n^{*}}^2) = \sigma^2\)</span>.</p>
 </div>
-</div>
-<div id="echantillons-gaussiens" class="section level2">
-<h2><span class="header-section-number">2.6</span> Echantillons Gaussiens</h2>
+<!-- ## Echantillons Gaussiens -->
+<!-- Dans ce paragraphe, on considère que la variable $X$ (la variante parente, de la population) suit une loi normale de moyenne $m$ et d'écart-type $\sigma$. -->
+<!-- $$ X \thicksim \mathcal{N}(m,\sigma^2)$$ -->
+<!-- Soit $(X_1,\ldots,X_n)$ un échantillon aléatoire de $X$. -->
 </div>
 <div id="introduction-a-lestimation" class="section level2">
-<h2><span class="header-section-number">2.7</span> Introduction à l’estimation ?</h2>
+<h2><span class="header-section-number">2.6</span> Introduction à l’estimation</h2>
+<p>On appelle estimation, la procédure d’utilisation des informations obtenues à partir d’un échantillon qui permet de déduire des résultats concernant l’ensemble de la population.</p>
+<div class="rmdcaution">
+<p>Dans ce cours, les estimations sont calculées à partir d’un échantillonnage aléatoire simple et avec remise, càd tous les individus de la population ont une probabilité égale de faire partie de l’échantillon qu’un individu peut être choisi plus qu’un fois.</p>
+</div>
+<p>La statistique inconnue d’une population, à estimer à partir d’un échantillon, est appelée un
+paramètre. Souvent le paramètre à estimer est une moyenne, un total, une proportion, un
+écart-type ou une variance.
+Le <em>paramètre</em> de la population est estimé à partir d’une <em>estimation</em> calculée à partir des
+données d’un échantillon.</p>
+<p>Le tableau ci dessous illustre les différents symboles souvent utilisés.</p>
+<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
+<thead>
+<tr>
+<th style="text-align:left;">
+</th>
+<th style="text-align:left;">
+Paramètres population
+</th>
+<th style="text-align:left;">
+Estimations calculées sur un échantillon de taille <span class="math inline">\(n\)</span>
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left;">
+<strong>Moyenne</strong>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(m\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\overline{X}_n=\hat{m}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<strong>Ecart-type</strong>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\sigma\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(S_n=\hat{\sigma}\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<strong>Variance</strong>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(\sigma^2\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(S_n^2=\hat{\sigma}^2\)</span>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+<strong>Proportion</strong>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(p\)</span>
+</td>
+<td style="text-align:left;">
+<span class="math inline">\(P_n=\hat{p}\)</span>
+</td>
+</tr>
+</tbody>
+</table>
+<div class="rmdtip">
+<p>On dit que <span class="math inline">\(\overline{X}_n\)</span> est un estimateur de <span class="math inline">\(m\)</span>. La valeur obtenue est une estimation de <span class="math inline">\(m\)</span>, qu’on appelle <span class="math inline">\(\hat{m}\)</span>.</p>
+</div>
+<div class="rmdinsight">
+<p>Les estimateurs sont des variables aléatoires et les estimations sont les valeurs
+observées des estimateurs (i.e des variables aléatoires).</p>
+</div>
+<p>Dans ce chapitre nous avons introduit des estimateurs de la moyenne, la variance et la proportion. Nous avons aussi étudié les lois de ces estimateurs. Dans le chapitre suivant, nous allons étudié la théorie de l’estimation ponctuelle et la recherche d’un estimateur.</p>
 
 </div>
 </div>
@@ -505,7 +601,7 @@ E(S_n^{2}) &amp; =\frac{1}{n} \sum_{i=1}^{n}E\big(X_{i}-m\big)^2-E\big(\overline
         </div>
       </div>
 <a href="tp-statistique-descriptive-avec-r.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-<a href="estimation-ponctuelle.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="exercices-1.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="book_assets/gitbook-2.6.7/js/app.min.js"></script>
