--- a/Statinf/intervalle-de-confiance.html
+++ b/Statinf/intervalle-de-confiance.html
@@ -80,43 +80,46 @@ pre.numberSource a.sourceLine::before
     -khtml-user-select: none; -moz-user-select: none;
     -ms-user-select: none; user-select: none;
     padding: 0 4px; width: 4em;
-    color: #aaaaaa;
+    background-color: #ffffff;
+    color: #a0a0a0;
   }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
 div.sourceCode
-  {  }
+  { color: #1f1c1b; background-color: #ffffff; }
 @media screen {
 a.sourceLine::before { text-decoration: underline; }
 }
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
+code span. { color: #1f1c1b; } /* Normal */
+code span.al { color: #bf0303; background-color: #f7e6e6; font-weight: bold; } /* Alert */
+code span.an { color: #ca60ca; } /* Annotation */
+code span.at { color: #0057ae; } /* Attribute */
+code span.bn { color: #b08000; } /* BaseN */
+code span.bu { color: #644a9b; font-weight: bold; } /* BuiltIn */
+code span.cf { color: #1f1c1b; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #924c9d; } /* Char */
+code span.cn { color: #aa5500; } /* Constant */
+code span.co { color: #898887; } /* Comment */
+code span.cv { color: #0095ff; } /* CommentVar */
+code span.do { color: #607880; } /* Documentation */
+code span.dt { color: #0057ae; } /* DataType */
+code span.dv { color: #b08000; } /* DecVal */
+code span.er { color: #bf0303; text-decoration: underline; } /* Error */
+code span.ex { color: #0095ff; font-weight: bold; } /* Extension */
+code span.fl { color: #b08000; } /* Float */
+code span.fu { color: #644a9b; } /* Function */
+code span.im { color: #ff5500; } /* Import */
+code span.in { color: #b08000; } /* Information */
+code span.kw { color: #1f1c1b; font-weight: bold; } /* Keyword */
+code span.op { color: #1f1c1b; } /* Operator */
+code span.ot { color: #006e28; } /* Other */
+code span.pp { color: #006e28; } /* Preprocessor */
+code span.re { color: #0057ae; background-color: #e0e9f8; } /* RegionMarker */
+code span.sc { color: #3daee9; } /* SpecialChar */
+code span.ss { color: #ff5500; } /* SpecialString */
+code span.st { color: #bf0303; } /* String */
+code span.va { color: #0057ae; } /* Variable */
+code span.vs { color: #bf0303; } /* VerbatimString */
+code span.wa { color: #bf0303; } /* Warning */
 </style>
 
 <link rel="stylesheet" href="css\style.css" type="text/css" />
@@ -140,9 +143,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -196,8 +197,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
 <li class="chapter" data-level="2.5" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#etude-de-la-statistique-s2"><i class="fa fa-check"></i><b>2.5</b> Etude de la statistique <span class="math inline">\(S^2\)</span></a></li>
-<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillons-gaussiens"><i class="fa fa-check"></i><b>2.6</b> Echantillons Gaussiens</a></li>
-<li class="chapter" data-level="2.7" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.7</b> Introduction à l’estimation ?</a></li>
+<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.6</b> Introduction à l’estimation</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="exercices-1.html"><a href="exercices-1.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><i class="fa fa-check"></i>TP illustration numérique des théorèmes limites avec R</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#realisations-de-variables-aleatoires"><i class="fa fa-check"></i>Réalisations de variables aléatoires</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-densite"><i class="fa fa-check"></i>Fonction de densité</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-repartition"><i class="fa fa-check"></i>Fonction de répartition</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#illustrations-de-theoremes-limites"><i class="fa fa-check"></i>Illustrations de théorèmes limites</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#loi-forte-de-grands-nombres"><i class="fa fa-check"></i>Loi forte de grands nombres</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#theoreme-central-limite-1"><i class="fa fa-check"></i>Théorème central limite</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#bonus"><i class="fa fa-check"></i>Bonus</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
 <li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
