--- a/Statinf/introduction.html
+++ b/Statinf/introduction.html
@@ -80,43 +80,46 @@ pre.numberSource a.sourceLine::before
     -khtml-user-select: none; -moz-user-select: none;
     -ms-user-select: none; user-select: none;
     padding: 0 4px; width: 4em;
-    color: #aaaaaa;
+    background-color: #ffffff;
+    color: #a0a0a0;
   }
-pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #a0a0a0;  padding-left: 4px; }
 div.sourceCode
-  {  }
+  { color: #1f1c1b; background-color: #ffffff; }
 @media screen {
 a.sourceLine::before { text-decoration: underline; }
 }
-code span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code span.at { color: #7d9029; } /* Attribute */
-code span.bn { color: #40a070; } /* BaseN */
-code span.bu { } /* BuiltIn */
-code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code span.ch { color: #4070a0; } /* Char */
-code span.cn { color: #880000; } /* Constant */
-code span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code span.dt { color: #902000; } /* DataType */
-code span.dv { color: #40a070; } /* DecVal */
-code span.er { color: #ff0000; font-weight: bold; } /* Error */
-code span.ex { } /* Extension */
-code span.fl { color: #40a070; } /* Float */
-code span.fu { color: #06287e; } /* Function */
-code span.im { } /* Import */
-code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
-code span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code span.op { color: #666666; } /* Operator */
-code span.ot { color: #007020; } /* Other */
-code span.pp { color: #bc7a00; } /* Preprocessor */
-code span.sc { color: #4070a0; } /* SpecialChar */
-code span.ss { color: #bb6688; } /* SpecialString */
-code span.st { color: #4070a0; } /* String */
-code span.va { color: #19177c; } /* Variable */
-code span.vs { color: #4070a0; } /* VerbatimString */
-code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
+code span. { color: #1f1c1b; } /* Normal */
+code span.al { color: #bf0303; background-color: #f7e6e6; font-weight: bold; } /* Alert */
+code span.an { color: #ca60ca; } /* Annotation */
+code span.at { color: #0057ae; } /* Attribute */
+code span.bn { color: #b08000; } /* BaseN */
+code span.bu { color: #644a9b; font-weight: bold; } /* BuiltIn */
+code span.cf { color: #1f1c1b; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #924c9d; } /* Char */
+code span.cn { color: #aa5500; } /* Constant */
+code span.co { color: #898887; } /* Comment */
+code span.cv { color: #0095ff; } /* CommentVar */
+code span.do { color: #607880; } /* Documentation */
+code span.dt { color: #0057ae; } /* DataType */
+code span.dv { color: #b08000; } /* DecVal */
+code span.er { color: #bf0303; text-decoration: underline; } /* Error */
+code span.ex { color: #0095ff; font-weight: bold; } /* Extension */
+code span.fl { color: #b08000; } /* Float */
+code span.fu { color: #644a9b; } /* Function */
+code span.im { color: #ff5500; } /* Import */
+code span.in { color: #b08000; } /* Information */
+code span.kw { color: #1f1c1b; font-weight: bold; } /* Keyword */
+code span.op { color: #1f1c1b; } /* Operator */
+code span.ot { color: #006e28; } /* Other */
+code span.pp { color: #006e28; } /* Preprocessor */
+code span.re { color: #0057ae; background-color: #e0e9f8; } /* RegionMarker */
+code span.sc { color: #3daee9; } /* SpecialChar */
+code span.ss { color: #ff5500; } /* SpecialString */
+code span.st { color: #bf0303; } /* String */
+code span.va { color: #0057ae; } /* Variable */
+code span.vs { color: #bf0303; } /* VerbatimString */
+code span.wa { color: #bf0303; } /* Warning */
 </style>
 
 <link rel="stylesheet" href="css\style.css" type="text/css" />
@@ -140,9 +143,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class='before'><a href="./">Statistique Inférentielle</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a><ul>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html#plan-du-cours"><i class="fa fa-check"></i>Plan du cours</a></li>
-</ul></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Overview</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html"><i class="fa fa-check"></i>Introduction</a><ul>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#la-demarche-statistique"><i class="fa fa-check"></i>La démarche statistique</a></li>
 <li class="chapter" data-level="" data-path="introduction.html"><a href="introduction.html#objectifs-et-plan-du-cours"><i class="fa fa-check"></i>Objectifs et plan du cours</a></li>
@@ -196,8 +197,18 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#loi-dun-pourcentage"><i class="fa fa-check"></i><b>2.4</b> Loi d’un pourcentage</a></li>
 <li class="chapter" data-level="2.5" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#etude-de-la-statistique-s2"><i class="fa fa-check"></i><b>2.5</b> Etude de la statistique <span class="math inline">\(S^2\)</span></a></li>
-<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#echantillons-gaussiens"><i class="fa fa-check"></i><b>2.6</b> Echantillons Gaussiens</a></li>
-<li class="chapter" data-level="2.7" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.7</b> Introduction à l’estimation ?</a></li>
+<li class="chapter" data-level="2.6" data-path="echantillonnage-et-theoremes-limites.html"><a href="echantillonnage-et-theoremes-limites.html#introduction-a-lestimation"><i class="fa fa-check"></i><b>2.6</b> Introduction à l’estimation</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="exercices-1.html"><a href="exercices-1.html"><i class="fa fa-check"></i>Exercices</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><i class="fa fa-check"></i>TP illustration numérique des théorèmes limites avec R</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#realisations-de-variables-aleatoires"><i class="fa fa-check"></i>Réalisations de variables aléatoires</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-densite"><i class="fa fa-check"></i>Fonction de densité</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#fonction-de-repartition"><i class="fa fa-check"></i>Fonction de répartition</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#illustrations-de-theoremes-limites"><i class="fa fa-check"></i>Illustrations de théorèmes limites</a><ul>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#loi-forte-de-grands-nombres"><i class="fa fa-check"></i>Loi forte de grands nombres</a></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#theoreme-central-limite-1"><i class="fa fa-check"></i>Théorème central limite</a></li>
+</ul></li>
+<li class="chapter" data-level="" data-path="tp-illustration-numerique-des-theoremes-limites-avec-r.html"><a href="tp-illustration-numerique-des-theoremes-limites-avec-r.html#bonus"><i class="fa fa-check"></i>Bonus</a></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html"><i class="fa fa-check"></i><b>3</b> Estimation ponctuelle</a><ul>
 <li class="chapter" data-level="3.1" data-path="estimation-ponctuelle.html"><a href="estimation-ponctuelle.html#introduction-1"><i class="fa fa-check"></i><b>3.1</b> Introduction</a></li>
@@ -435,13 +446,11 @@ ce cours seront adaptables à tous les types de données.</p>
 de données (description, estimation, tests), ainsi que les méthodes statistiques les plus
 usuelles. Ces méthodes seront toujours illustrées par des problèmes concrets. Le cours privilégie l’application à la
 théorie. Les méthodes présentées seront mises en œuvre à l’aide du logiciel <svg style="height:0.8em;top:.04em;position:relative;fill:steelblue;" viewBox="0 0 581 512"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"/></svg> (<a href="https://www.r-project.org" class="uri">https://www.r-project.org</a>).</p>
-<p><span style="color:red">Le chapitre 2 présente les techniques de base en statistique descriptive, représentations
-graphiques et indicateurs statistiques. Le chapitre 3 est consacré aux problèmes d’estima-
+<p>Le premier chapitre présente les techniques de base en statistique descriptive, représentations
+graphiques et indicateurs statistiques. Le chapitre suivant introduit l’échantillonnage et les théorèmes limites avec une étude des statistiques <span class="math inline">\(\overline{X}_n\)</span> et <span class="math inline">\(S^2\)</span>. Le chapitre 3 est consacré aux problèmes d’estima
 tion paramétrique ponctuelle, le chapitre 4 aux intervalles de confiance et le chapitre 5
-aux tests d’hypothèses. Le dernier chapitre est consacré à une des méthodes statistiques
-les plus utilisées, la régression linéaire. Enfin, des annexes donnent quelques rappels de
-probabilités utiles en statistique, des tables des lois de probabilité usuelles et une courte
-introduction à R.</span></p>
+aux tests d’hypothèses. Enfin, des annexes donnent quelques rappels de
+probabilités utiles en statistique et des tables des lois de probabilité usuelles.</p>
 
 </div>
 </div>
