--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous Random Variables: . - Exercises: . - Normal Distribution...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous Random Variables: . - Exercises: . - Normal Distribution...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Fall 2019-2020: Course materials . * Statistique Inférentielle. + Fall 2019-2020: Course materials . * Complément de formation Statistique. + Fall 2019-2020: Course materials . + Fall 2018-2019: - Discrete Random Variables: . - Continuous...">
   
 
   
@@ -239,6 +239,11 @@
 <!-- 	[Course repository](../MLcourse/index.html "Introduction to Machine Learning -- Spring 16-17"). -->
 
 <ul>
+  <li>Statistique Inférentielle.
+    <ul>
+      <li>Fall 2019-2020: <a target="_blank" href="../Statinf/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
+    </ul>
+  </li>
   <li>Complément de formation Statistique.
     <ul>
       <li>Fall 2019-2020:  <a target="_blank" href="../Complement_probabilites_statistique/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
